<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<ImageButton-->
            <!--android:id="@+id/imgBtn"-->
            <!--android:layout_width="140dp"-->
            <!--android:layout_height="140dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="30dp"-->
            <!--android:baselineAlignBottom="true"-->
            <!--android:clickable="true"-->
            <!--android:src="@drawable/circle_shape" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgBtn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:baselineAlignBottom="true"
                android:clickable="true"
                android:src="@drawable/profile_image" />


            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />


            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_lastName"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_edges"
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:padding="10dp" />


                <Spinner
                    android:id="@+id/spnrPhoneType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_edges"
                    android:ems="10"
                    android:entries="@array/phoneTypeList"
                    android:padding="10dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_street"
                android:imeOptions="actionNext"
                android:inputType="text|textPostalAddress|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_city"
                android:imeOptions="actionNext"
                android:inputType="textShortMessage|text|textPostalAddress|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_state"
                android:imeOptions="actionNext"
                android:inputType="text|textPostalAddress|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/txtZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_edges"
                android:ems="10"
                android:hint="@string/hint_zip"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/btn_edit" />

                <Button
                    android:id="@+id/btnMainMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/btn_main_menu" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>